--- a/W4D4/package.json
+++ b/W4D4/package.json
@@ -1,5 +1,9 @@
 {
   "name": "W4D4",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0"
+  }
 }
